test/valid/58168_decrementor/decrementor.agu
-- Author: 58168, Henrique Costa Vale

let denc(n) : Int -> Int =
    set n = n - 1;
    n

let main(_) : Unit -> Unit =
  print(denc(6))